fix(pass): guard null voucher id and null issuer id/organization name
Two identity fields could reach the rendered pass.json unguarded:

- VoucherSecret.getVoucherId() returns null when the secret's data field
  is not a valid UUID (documented behaviour; VoucherValidator treats it
  as an error). SignedVoucher's constructor only checks isSigned(), so
  such a voucher could reach the mapper and stringify to the literal
  "null" in serialNumber, the voucherId back field, userInfo, and the
  barcode. Added voucherId(secret), hoisted once per toPass() call, and
  used everywhere the id was previously computed via String.valueOf(...).

- organizationName(...) fell back to secret.getIssuerId() with no floor:
  when branding supplies no name and the issuer id is absent, the schema
  -required organizationName key silently dropped via @JsonInclude(NON_NULL).
  Guarded the same way, keeping branding's precedence.

Together with the existing unit/faceValue checks, the mapper now validates
the same four identity fields VoucherValidator checks; documented that
coupling since it's otherwise invisible across modules.

Also: userInfo() was building a LinkedHashMap for its order and then
discarding that order via Map.copyOf (unspecified iteration order).
Switched to Collections.unmodifiableMap, which keeps insertion order.

Tests: added coverage for a null-unit voucher, a voucher whose secret
data is not a valid UUID (built directly via setData(), since
VoucherSecret.builder() always yields a valid UUID), and a voucher with
no issuer id and no branding. Also hardened the golden-document test to
assert exactly one barcode and the exact top-level key set, so an extra
key or a second barcode would be caught.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>